--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,3 +16,9 @@ footer {
 #sidebar {
   display: none !important;
 }
+
+.video {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
