--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,8 +15,17 @@ footer {
   display: none !important;
 }
 
-.video {
+.video-container {
   position: relative;
   width: 100%;
   padding-bottom: 56.25%;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
